HMRC-1382: Accessibility Story: Fix Insufficient Colour Contrast for Commodity Code Labels

--- a/app/assets/stylesheets/src/_colors.scss
+++ b/app/assets/stylesheets/src/_colors.scss
@@ -19,4 +19,5 @@ $coloured-commodity-code--second: #d9ecf7;
 $coloured-commodity-code--third:  #d5f5f2;
 
 $shaded-panel-background-colour: #f6f6f6;
+$shaded-panel-text-colour: #125591;
 $coloured-panel-background-colour: #d2edf9;
